--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -1,41 +1,100 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-     display: flex;
-    flex-direction: column;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .sidebar {
-    background-color: rgb(48, 48, 50);
-	
+	background-color: rgb(48, 48, 50);
 	font-weight: 600;
-	
-    width: 200px;
-    height: 100%;
-    position: fixed;
-    padding: 100px 20px;
+	width: 200px;
+	height: 100%;
+	position: fixed;
+	padding: 100px 20px;
+}
+
+.sidebar h3 {
+	color: white;
 }
 
 .sidebar ul {
-    list-style-type: none;
-    padding: 0;
+	list-style-type: none;
+	padding-top: 50px;
 }
 
 .sidebar li {
-    padding: 10px;
-    
+	padding: 10px 0px;
+
+
 }
 
 .sidebar a {
-    text-decoration: none;
-    color: white;
+	text-decoration: none;
+	color: white;
+	
 }
 
-
-
 .content {
-    margin-left: 250px;
+	margin-left: 250px;
+	margin-top: -100px;
+}
+
+.content #main_logo {
+	width: 450px;
+	height: 300px;
+	z-index: 0;
+	margin-top: -250px;
+	margin-left: 700px;
+}
+
+.bg-body-tertiary {
+	height: 250px;
+	height: 250px;
+	margin-top: 200px;
+
+	border-radius: 10px;
+	width: 1210px;
+}
+
+#highlights {
+	font-weight: bold;
+	font-size: 30px;
+	z-index: 0;
+	margin-top: -200px;
+	margin-left: 25px;
+}
+
+.bg-body-tertiaries {
+	margin-left: 200px;
+	height: 75px;
+	margin-top: 0px;
+	padding: 0px;
+	background-color: rgba(248, 249, 250, 255);
+	/* border-radius: 10px; */
+	width: 1300px;
+}
+
+p#create_student {
+	font-weight: bold;
+	font-size: 23px;
+	margin-left: -10px;
+}
+
+.create_block {
+	display: flex;
+	justify-content: space-around;
+	background-color: rgb(59, 59, 60);
+	box-shadow: rgba(200, 198, 198, 0.24) 0px 3px 8px;
+	border-radius: 10px;
+}
+
+img#add_student {
+	margin-top: 15px;
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
 }
 
 /* Rest of your existing CSS styles */
